package com.mrp.fe3hreference.feature.characterdetail

enum class CharacterDetailTab(
    val label: String,
) {
    STATS("Stats"),
    ITEMS("Items"),
    TEAS("Teas"),
}
