package com.mrp.fe3hreference.data.model

enum class ProficiencyType {
    SWORD,
    LANCE,
    AXE,
    BOW,
    BRAWLING,
    REASON,
    FAITH,
    AUTHORITY,
    ARMOR,
    RIDING,
    FLYING,
}
