<resources>
    <string name="app_name">FE3H Reference</string>
</resources>
